--- a/style.css
+++ b/style.css
@@ -154,3 +154,17 @@ img {
   margin: auto;
   max-width: 60px;
 }
+
+@media (max-width: 600px) {
+  .head,
+  h1 {
+    margin: 0px 10px;
+    line-height: normal;
+  }
+
+  h4,
+  .float-left {
+    margin: 0px 10px;
+    line-height: normal;
+  }
+}
