--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+@import url(style.css);
 
 body {
   height: 100%;
@@ -156,15 +157,18 @@ img {
 }
 
 @media (max-width: 600px) {
-  .head,
-  h1 {
-    margin: 0px 10px;
-    line-height: normal;
+  form {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 14px;
+    padding-bottom: 14px;
   }
-
-  h4,
-  .float-left {
-    margin: 0px 10px;
-    line-height: normal;
+}
+@media only screen and (max-device-width: 480px) {
+  form {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding-top: 14px;
+    padding-bottom: 14px;
   }
 }
