--- a/style.css
+++ b/style.css
@@ -164,11 +164,11 @@ img {
     padding-bottom: 14px;
   }
 }
-@media only screen and (max-device-width: 480px) {
-  form {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1280px) {
+  h1,
+  h4 {
     margin-top: auto;
     margin-bottom: auto;
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding: 1%;
   }
 }
